--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
           rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
           crossorigin="anonymous">
     <link rel="stylesheet" href="css/shopstyles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Меню</a>
+          <a class="navbar-brand" href="index.html"><span class="Menu">Меню</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="key.html">Ключи</a>
+                <a class="nav-link active" aria-current="page" href="key.html"><span class="key">Ключі</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="account.html">Аккаунты</a>
+                <a class="nav-link" href="account.html"><span class="account">Аккаунты</span></a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -35,11 +36,8 @@
       </nav>
       
       <div>
-        <p class="container-fluid">frefe</p>
-      </div>
-      <div>
-        <p class=""></p>
-      </div>
+        <p>акак</p>
+
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
