--- a/key.html
+++ b/key.html
@@ -10,6 +10,7 @@
           crossorigin="anonymous">
     <link rel="stylesheet" href="css/shopstyles.css">
     <link rel="stylesheet" href="style.css">
+    
 
 </head>
 <body>
@@ -39,7 +40,7 @@
         <img class="example-img" src="Заставка.png">
     </div>
     <div>
-<p><span class="Акція">Iгри по акції</span></p>
+<p><span class="Акція">Ігри по акції</span></p>
 <div class="Карусель">
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
