--- a/key2.html
+++ b/key2.html
@@ -41,16 +41,17 @@
     </div>
     <div>
 <p><span class="Акція">Ігри по акції</span></p>
+<div class="Карусель">
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="photo/farcry5.png" class="d-block w-100" alt="png">
+        <img src="photo/farcry5.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-       <a href="#"><img src="photo/batla5.png" class="d-block w-100" alt="png"></a>
+        <img src="photo/batla5.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="photo/sekiro.png" class="d-block w-100" alt="png">
+        <img src="photo/sekiro.png" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"  data-bs-slide="prev">
@@ -63,44 +64,45 @@
     </button>
   </div>
 
-<div>
-  <ul class="nav">
-    <li class="nav-item">
-     <div class="Популярні">
-      <a class="nav-link active" aria-current="page" href="#">>Популярні Ігри<</a>
-     </div>
-    </li>
-  </ul>
-</div>
+  <div>
+    <ul class="nav">
+      <li class="nav-item">
+       <div class="Популярні">
+        <a class="nav-link active" aria-current="page" href="key.html">Популярні Ігри</a>
+       </div>
+      </li>
+    </ul>
+  </div>
+  
+  <div>
+    <ul class="nav">
+      <li class="nav-item">
+       <div class="New2">
+        <a class="nav-link active" aria-current="page" href="key2.html">>Новинки<</a>
+       </div>
+      </li>
+    </ul>
+  </div>
 
-<div>
-  <ul class="nav">
-    <li class="nav-item">
-     <div class="New">
-      <a class="nav-link active" aria-current="page" href="key2.html">Новинки</a>
-     </div>
-    </li>
-  </ul>
-</div>
-
-<div class="row row-cols-1 row-cols-md-5 g-4">
+<div class="Go"> 
+  <div class="row row-cols-1 row-cols-md-5 g-4">
   <div class="col">
     <div class="card">
       <img src="photo/mw2.png" class="card-img-top" alt="png">
       <div class="card-body">
         <h5 class="card-title">Call of Duty MW II</h5>
         <p class="card-text">Call of Duty: Modern Warfare II — відеогра в жанрі шутера від першої особи.</p>
-        <a href="CODMW2.html" class="btn btn-primary">Купити 1099₴</a>
+        <a href="#" class="btn btn-primary">Купити 1099₴</a>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="photo/elden ring.png" class="card-img-top" alt=".png">
+      <img src="photo/elden.png" class="card-img-top" alt=".png">
       <div class="card-body">
         <h5 class="card-title">Elden Ring</h5>
         <p class="card-text">Elden Ring — відеогра жанру Action/RPG з відкритим світом.</p>
-        <a href="Elden Ring.html" class="btn btn-primary">Купити 400₴</a>
+        <a href="#" class="btn btn-primary">Купити 400₴</a>
       </div>
     </div>
   </div>
@@ -109,7 +111,7 @@
       <img src="photo/Dying.png" class="card-img-top" alt="png">
       <div class="card-body">
         <h5 class="card-title">Dying light 2</h5>
-        <p class="card-text">Dying Light 2 — жанр survival horror та бойовик від першої особи у жанрі відкритого світу.</p>
+        <p class="card-text">Dying Light 2 Stay Human — відеогра в жанрі survival horror та рольовий бойовик від першої особи у жанрі відкритого світу.</p>
         <a href="#" class="btn btn-primary">Купити 399₴</a>
       </div>
     </div>
@@ -119,7 +121,7 @@
       <img src="photo/Stray.png" class="card-img-top" alt="png">
       <div class="card-body">
         <h5 class="card-title">Stray</h5>
-        <p class="card-text">Stray — пригодницька відеогра, розроблена BlueTwelve Studio.</p>
+        <p class="card-text">Stray — пригодницька відеогра про кота .</p>
         <a href="#" class="btn btn-primary">Купити 85₴</a>
       </div>
     </div>
@@ -128,8 +130,8 @@
     <div class="card">
       <img src="photo/god of war.png" class="card-img-top" alt="png">
       <div class="card-body">
-        <h5 class="card-title">God of War: Ragnarök</h5>
-        <p class="card-text">God of War: Ragnarök — відеогра в жанрі пригодницького бойовика</p>
+        <h5 class="card-title">God of War</h5>
+        <p class="card-text">God of War — медіафраншиза, зосереджена навколо однойменної серії відеоігор жанрів Hack and slash і Action-adventure, створених за мотивами давньогрецької міфології.</p>
         <a href="#" class="btn btn-primary">Купити 1185₴</a>
       </div>
     </div>
@@ -145,55 +147,8 @@
       </div>
     </div>
   </div>
-
-  <div class="col">
-    <div class="card">
-      <img src="photo/vill.png" class="card-img-top" alt="png">
-      <div class="card-body">
-        <h5 class="card-title">Resident Evil: Village</h5>
-        <p class="card-text">Resident Evil Village — відеогра жанру survival horror, розроблена та видана Capcom.</p>
-        <a href="#" class="btn btn-primary">Купити 643₴</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col">
-    <div class="card">
-      <img src="photo/monster.png" class="card-img-top" alt="png">
-      <div class="card-body">
-        <h5 class="card-title">Monster Hunter: World</h5>
-        <p class="card-text">Monster Hunter: World — відеогра жанру Екшн-РПГ, яку розробила компанія Capcom.</p>
-        <a href="#" class="btn btn-primary">Купити 376₴</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col">
-    <div class="card">
-      <img src="photo/zero.png" class="card-img-top" alt="png">
-      <div class="card-body">
-        <h5 class="card-title">Horizon Zero Dawn</h5>
-        <p class="card-text">Horizon Zero Dawn — жанру Action/RPG, розроблена студією Guerrilla Games.</p>
-        <a href="#" class="btn btn-primary">Купити 450₴</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col">
-    <div class="card">
-      <img src="photo/metro.png" class="card-img-top" alt="png">
-      <div class="card-body">
-        <h5 class="card-title">Metro Exodus</h5>
-        <p class="card-text">Metro Exodus — шутер від першої особи, розроблена ​​українською компанією 4A Games.</p>
-        <a href="#" class="btn btn-primary">Купити 250₴</a>
-      </div>
-    </div>
-  </div>
-
-</div>
-
-
-</div>
+</div> 
+  
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
