--- a/CODMW2.html
+++ b/CODMW2.html
@@ -9,7 +9,7 @@
           rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
           crossorigin="anonymous">
     <link rel="stylesheet" href="css/shopstyles.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CDMW2/MW2.css">
     
 
 </head>
@@ -73,7 +73,6 @@
 </div>
 
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
- <div class="Карусель2">
   <div class="carousel-inner">  
 <div class="carousel-item active">
   <img src="CDMW2/thumb_109912_slide_game_full.jpeg" class="d-block w-100" alt="jpeg">
@@ -91,9 +90,6 @@
   <img src="CDMW2/thumb_109915_slide_game_full.jpeg" class="d-block w-100" alt="...">
 </div>
     </div>
- </div>
-
-  <div class="Кнопки">
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"  data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Предыдущий</span>
@@ -103,9 +99,9 @@
       <span class="visually-hidden">Следующий</span>
     </button>
   </div>
-</div>
 
-<div class="Харки">
+
+<div class="int">
   <p>
     <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
       Системні вимоги
@@ -114,19 +110,19 @@
       Бонус за предзаказ
     </button>
   </p>
-    <div class="collapse" id="collapseExample">
-      <div class="card card-body">
-        <p>-ОС: Windows 10 (64 біт);</p>
-        <p>-процесор: Intel Core i3-6100, Intel Core i5-2500K или AMD Ryzen 3 1200;</p>
-        <p>-відеокарта: NVIDIA GeForce GTX 960 или AMD Radeon RX 470;</p>
-        <p>-відеопам'ять: 2 Гбайт;</p>
-        <p>-оперативна пам'ять: 8 Гб;</p>
-        <p>-DirectX: 12;</p>
-        <p>-місце на диску: 72 Гб (на запуску);</p>
-        <p>-місце для стримінгу текстур високої роздільної здатності: до 32 Гбайт.</p>
-      </div>
+  <div class="Пыдпис"><div class="collapse" id="collapseExample">
+    <div class="card card-body">
+      <p>-ОС: Windows 10 (64 біт);</p>
+      <p>-процесор: Intel Core i3-6100, Intel Core i5-2500K или AMD Ryzen 3 1200;</p>
+      <p>-відеокарта: NVIDIA GeForce GTX 960 или AMD Radeon RX 470;</p>
+      <p>-відеопам'ять: 2 Гбайт;</p>
+      <p>-оперативна пам'ять: 8 Гб;</p>
+      <p>-DirectX: 12;</p>
+      <p>-місце на диску: 72 Гб (на запуску);</p>
+      <p>-місце для стримінгу текстур високої роздільної здатності: до 32 Гбайт.</p>
     </div>
-
+  </div>
+</div>
 
 
     </div>
