--- a/Elden Ring.html
+++ b/Elden Ring.html
@@ -9,7 +9,7 @@
           rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
           crossorigin="anonymous">
     <link rel="stylesheet" href="css/shopstyles.css">
-    <link rel="stylesheet" href="Ігри.css">    
+    <link rel="stylesheet" href="Elden Ring/Elden Ring.css">    
 
 </head>
 <body>
