--- a/key2.html
+++ b/key2.html
@@ -88,65 +88,114 @@
   <div class="row row-cols-1 row-cols-md-5 g-4">
   <div class="col">
     <div class="card">
-      <img src="photo/mw2.png" class="card-img-top" alt="png">
+      <img src="photo/Requiem.png" class="card-img-top" alt="png">
       <div class="card-body">
-        <h5 class="card-title">Call of Duty MW II</h5>
-        <p class="card-text">Call of Duty: Modern Warfare II — відеогра в жанрі шутера від першої особи.</p>
-        <a href="#" class="btn btn-primary">Купити 1099₴</a>
+        <h5 class="card-title">A Plague Tale: Requiem</h5>
+        <p class="card-text">A Plague Tale: Requiem — відеогра в жанрах пригодницький бойовик та стелс, розроблена Asobo Studio.</p>
+        <a href="#" class="btn btn-primary">Купити 789₴</a>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="photo/elden.png" class="card-img-top" alt=".png">
+      <img src="photo/Steelrising.png" class="card-img-top" alt=".png">
       <div class="card-body">
-        <h5 class="card-title">Elden Ring</h5>
-        <p class="card-text">Elden Ring — відеогра жанру Action/RPG з відкритим світом.</p>
-        <a href="#" class="btn btn-primary">Купити 400₴</a>
+        <h5 class="card-title">Steelrising</h5>
+        <p class="card-text">Steelrising — стильний пригодницький екшен від третьої особи з опрацьованим сюжетом.</p>
+        <a href="#" class="btn btn-primary">Купити 449₴</a>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="photo/Dying.png" class="card-img-top" alt="png">
+      <img src="photo/Valhalla.png" class="card-img-top" alt="png">
       <div class="card-body">
-        <h5 class="card-title">Dying light 2</h5>
-        <p class="card-text">Dying Light 2 Stay Human — відеогра в жанрі survival horror та рольовий бойовик від першої особи у жанрі відкритого світу.</p>
-        <a href="#" class="btn btn-primary">Купити 399₴</a>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="photo/Stray.png" class="card-img-top" alt="png">
-      <div class="card-body">
-        <h5 class="card-title">Stray</h5>
-        <p class="card-text">Stray — пригодницька відеогра про кота .</p>
-        <a href="#" class="btn btn-primary">Купити 85₴</a>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="photo/god of war.png" class="card-img-top" alt="png">
-      <div class="card-body">
-        <h5 class="card-title">God of War</h5>
-        <p class="card-text">God of War — медіафраншиза, зосереджена навколо однойменної серії відеоігор жанрів Hack and slash і Action-adventure, створених за мотивами давньогрецької міфології.</p>
-        <a href="#" class="btn btn-primary">Купити 1185₴</a>
+        <h5 class="card-title">Assassin’s Creed: Valhalla</h5>
+        <p class="card-text">Assassin's Creed Valhalla — багатоплатформна відеогра жанру рольового бойовика та стелс.</p>
+        <a href="#" class="btn btn-primary">Купити 1209₴</a>
       </div>
     </div>
   </div>
 
   <div class="col">
     <div class="card">
-      <img src="photo/red dead.png" class="card-img-top" alt="png">
+      <img src="photo/Forspoken.png" class="card-img-top" alt="png">
       <div class="card-body">
-        <h5 class="card-title">Red Dead Redemption 2</h5>
-        <p class="card-text">Red Dead Redemption 2 — це пригодницька відеогра, розроблена і видана Rockstar Games.</p>
-        <a href="#" class="btn btn-primary">Купити 810₴</a>
+        <h5 class="card-title">Forspoken</h5>
+        <p class="card-text">Forspoken — відеогра в жанрі рольового бойовика, яка розробляється Luminous Productions.</p>
+        <a href="#" class="btn btn-primary">Предзаказ 2140₴</a>
       </div>
     </div>
   </div>
+
+  <div class="col">
+    <div class="card">
+      <img src="photo/Quarry.png" class="card-img-top" alt="png">
+      <div class="card-body">
+        <h5 class="card-title">The Quarry</h5>
+        <p class="card-text">The Quarry — інтерактивна драма жахів, розроблена Supermassive Games та опублікована 2K Games.</p>
+        <a href="#" class="btn btn-primary">Купити 2185₴</a>
+      </div>
+    </div>
+
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="photo/Haiku.png" class="card-img-top" alt="png">
+      <div class="card-body">
+        <h5 class="card-title">Haiku, the Robot</h5>
+        <p class="card-text">Haiku — це мила пригодницька дослідницька гра, дія якої відбувається у величезному взаємопов’язаному світі, повному зіпсованих роботів і техніки.</p>
+        <a href="#" class="btn btn-primary">Купити 239₴</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card">
+      <img src="photo/stalker2.png" class="card-img-top" alt="png">
+      <div class="card-body">
+        <h5 class="card-title">S.T.A.L.K.E.R. 2: Heart of Chornobyl</h5>
+        <p class="card-text">S.T.A.L.K.E.R. 2 — відеогра в жанрі постапокаліптичного шутера, розробляє українська компанія GSC Game World.</p>
+        <a href="#" class="btn btn-primary">Предзаказ 1350₴</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card">
+      <img src="photo/Vampire.png" class="card-img-top" alt="png">
+      <div class="card-body">
+        <h5 class="card-title">Vampire: The Masquerade - Bloodlines 2</h5>
+        <p class="card-text">Vampire the Masquerade Bloodlines 2 – культове продовження рольової гри, тематики вампірів.</p>
+        <a href="#" class="btn btn-primary">Предзаказ 465₴</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card">
+      <img src="photo/Protocol.png" class="card-img-top" alt="png">
+      <div class="card-body">
+        <h5 class="card-title">The Callisto Protocol</h5>
+        <p class="card-text">The Callisto Protocol – це майбутня відеогра у жанрі survival horror, розроблена Striking Distance Studios і видана Krafton.</p>
+        <a href="#" class="btn btn-primary">Предзаказ 615₴</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card">
+      <img src="photo/Way of the Hunter.png" class="card-img-top" alt="png">
+      <div class="card-body">
+        <h5 class="card-title">Way of the Hunter</h5>
+        <p class="card-text">Way of the Hunter – полювання на тварин у їхньому природному середовищі та мальовничою місцевістю Америки та Європи.</p>
+        <a href="#" class="btn btn-primary">Купити 855₴</a>
+      </div>
+    </div>
+  </div>
+
+
+
 </div> 
   
 
