--- a/CODMW2.html
+++ b/CODMW2.html
@@ -47,7 +47,7 @@
       <div class="card-body">
         <p class="card-text"><span class="war">Call of Duty: Modern Warfare II</span> 
           <span class="windows">(Windows, PS 4, PS 5, Xbox One, Xbox SX)</span>
-          <p><span class="raz">Розробник:</span><span class="windows">Infinity Ward, Raven Software, Beenox, Treyarch, High Moon Studios, Sledgehammer Games, Activision Shanghai, Demonware, Toys for Bob</span></p>
+          <p><span class="raz">Розробник:</span><span class="windows"> Infinity Ward, Raven Software, Beenox, Treyarch, High Moon Studios, Sledgehammer Games, Activision Shanghai, Demonware, Toys for Bob</span></p>
           
           <p class="raz">Видавець: <span class="windows">Activision</span></p>
           <p>Дата виходу: 28 жов. 2022р.</p>
@@ -101,16 +101,16 @@
   </div>
 
 
-<div class="int">
-  <p>
+  <p class="int">
     <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
       Системні вимоги
     </a>
-    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" href="#collapseExample1" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">
       Бонус за предзаказ
     </button>
   </p>
-  <div class="Пыдпис"><div class="collapse" id="collapseExample">
+  <div class="Підпис">
+    <div class="collapse" id="collapseExample">
     <div class="card card-body">
       <p>-ОС: Windows 10 (64 біт);</p>
       <p>-процесор: Intel Core i3-6100, Intel Core i5-2500K или AMD Ryzen 3 1200;</p>
@@ -119,13 +119,20 @@
       <p>-оперативна пам'ять: 8 Гб;</p>
       <p>-DirectX: 12;</p>
       <p>-місце на диску: 72 Гб (на запуску);</p>
-      <p>-місце для стримінгу текстур високої роздільної здатності: до 32 Гбайт.</p>
     </div>
   </div>
 </div>
 
+<div class="Підпис1">
+  <div class="collapse" id="collapseExample1">
+  <div class="card card-body">
+    <p>-Доступ до кампанії на тиждень раніше;</p>
+    <p>-Комплект «Останній суд» та комплект «Оператор Халеда Аль-Асада».;</p>
+  </div>
+</div>
+</div>
 
-    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
             crossorigin="anonymous"></script>
