--- a/A Plague Tale Requiem.html
+++ b/A Plague Tale Requiem.html
@@ -9,7 +9,7 @@
           rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
           crossorigin="anonymous">
     <link rel="stylesheet" href="css/shopstyles.css">
-    <link rel="stylesheet" href="CDMW2/MW2.css">
+    <link rel="stylesheet" href="A Plague Tale Requiem/A Plague Tale Requiem.css">
     
 
 </head>
@@ -42,15 +42,15 @@
 
 
   <div class="Call">
-    <div class="card" style="width: 25rem;">
-      <img src="photo/mw2.png" class="card-img-top" alt=".png">
+    <div class="card">
+      <img src="photo/Requiem.png" class="card-img-top" alt=".png">
       <div class="card-body">
-        <p class="card-text"><span class="war">Call of Duty: Modern Warfare II</span> 
+        <p class="card-text"><span class="war">A Plague Tale: Requiem</span> 
           <span class="windows">(Windows, PS 4, PS 5, Xbox One, Xbox SX)</span>
-          <p><span class="raz">Розробник:</span><span class="windows"> Infinity Ward, Raven Software, Beenox, Treyarch, High Moon Studios, Sledgehammer Games, Activision Shanghai, Demonware, Toys for Bob</span></p>
+          <p><span class="raz">Розробник:</span><span class="windows">Asobo Studio</span></p>
           
-          <p class="raz">Видавець: <span class="windows">Activision</span></p>
-          <p>Дата виходу: 28 жов. 2022р.</p>
+          <p class="raz">Видавець: <span class="windows">Focus Entertainment</span></p>
+          <p>Дата виходу: 18 жов. 2022р.</p>
       </div>
     </div>
   </div>
@@ -61,11 +61,9 @@
         <div class="card" style="width: 55rem;">
           <div class="card-body">
             <h5 class="card-title">Короткий Опис</h5>
-            <p class="card-text">З продовженням перезавантаження Call of Duty: Modern Warfare II у 2022 році користувачі зможуть поринути у тотальний конфлікт оперативників США з наркокартелем.</p>
-            <p class="card-text">При покупці шутера Call of Duty: Modern Warfare II є два видання: Standard і Vault Edition. Розширене видання відкриє доступ до 50 етапів, бойового сезонного пропуску, легендарної ОТГ-141 та багато іншого.</p>
-            <p class="card-text">Стандартне видання відкриє доступ до мережного мультиплеєра, ранніх кампаній та кількох наборів.</p>
-            <p class="card-text">Новий шутер може похвалитися оновленою системою прогресії зброї та кастомізації. Гра має опрацьовану зброю, у тому числі гарну віддачу.</p>
-            <p class="card-text">У гру також додана водна місія та можливість здійснювати стрибки між машинами на ходу. Крім іншого, серед нововведень на вас чекають нові транспортні засоби та нові гаджети.</p>
+            <p class="card-text">Вирушайте разом з Аміцією та Гуго де Рун на південь, подалі від чуми, до нового життя. Вони не залишають спроби приборкати родове прокляття, хворобу крові Гуго. Дізнайтеся, скільки зусиль доведеться вкласти в подорож та дорогу до кращого життя, а також не забувайте, що завжди доводиться чимось жертвувати.</p>
+            <p class="card-text">На вас чекає більше локацій, які дадуть вам додаткові варіанти розвитку ігрового процесу. Цього разу Аміцію не можна буде вбити одним ударом (що дратувало), а, крім режиму скритності з нововведень, ваша героїня зможе парирувати атаки супротивників при ближньому бою.</p>
+            <p class="card-text">Що ж чекає на вас у фіналі мандрівки головних героїв? Поспішайте купити A Plague Tale: Requiem, щоб дізнатися про всі таємниці, які ховаються у темряві.</p>
           </div>
         </div>
       </div>
@@ -75,19 +73,19 @@
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">  
 <div class="carousel-item active">
-  <img src="CDMW2/thumb_109912_slide_game_full.jpeg" class="d-block w-100" alt="jpeg">
+  <img src="A Plague Tale Requiem/thumb_107417_poster_game_full.png" class="d-block w-100" alt="png">
 </div>
 <div class="carousel-item">
-  <img src="CDMW2/thumb_109911_poster_game_full.jpeg" class="d-block w-100" alt="...">
+  <img src="A Plague Tale Requiem/thumb_107419_slide_game_full.png" class="d-block w-100" alt="...">
 </div>
 <div class="carousel-item">
-  <img src="CDMW2/thumb_109913_slide_game_full.jpeg" class="d-block w-100" alt="...">
+  <img src="A Plague Tale Requiem/thumb_107420_slide_game_full.png" class="d-block w-100" alt="...">
 </div>
 <div class="carousel-item">
-  <img src="CDMW2/thumb_109914_slide_game_full.jpeg" class="d-block w-100" alt="...">
+  <img src="A Plague Tale Requiem/thumb_107421_slide_game_full.png" class="d-block w-100" alt="...">
 </div>
 <div class="carousel-item">
-  <img src="CDMW2/thumb_109915_slide_game_full.jpeg" class="d-block w-100" alt="...">
+  <img src="A Plague Tale Requiem/thumb_109949_slide_game_full.png" class="d-block w-100" alt="...">
 </div>
     </div>
   </div>
@@ -105,9 +103,6 @@
     <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
       Системні вимоги
     </a>
-    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" href="#collapseExample1" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">
-      Бонус за предзаказ
-    </button>
   </p>
   <div class="Підпис">
     <div class="collapse" id="collapseExample">
@@ -122,16 +117,6 @@
     </div>
   </div>
 </div>
-
-<div class="Підпис1">
-  <div class="collapse" id="collapseExample1">
-  <div class="card card-body">
-    <p>-Доступ до кампанії на тиждень раніше;</p>
-    <p>-Комплект «Останній суд» та комплект «Оператор Халеда Аль-Асада».;</p>
-  </div>
-</div>
-</div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
