--- a/Elden Ring.html
+++ b/Elden Ring.html
@@ -35,8 +35,9 @@
         <img class="example-img" src="Заставка.png">
     </div>
 
+    
     <div class="Call">
-      <div class="card" style="width: 25rem;">
+      <div class="card">
         <img src="photo/elden ring.png" class="card-img-top" alt="png">
         <div class="card-body">
           <p class="card-text"><span class="war">Elden Ring</span> 
@@ -54,7 +55,7 @@
     <div class="Опис">
       <div class="row row-cols-1 row-cols-md-1 g-1">
         <div class="col">
-          <div class="card" style="width: 55rem;">
+          <div class="card">
             <div class="card-body">
               <h5 class="card-title">Короткий Опис</h5>
               <p class="card-text">Elden Ring – ідейна спадкоємиця культової серії Dark Souls, яка здобула світову популярність завдяки своїй атмосфері, лору та, звичайно ж, небувалій складності.</p>
@@ -103,21 +104,15 @@
       <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
         Системні вимоги
       </a>
-      <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-        Бонус за предзаказ
-      </button>
     </p>
     <div class="Підпис"> 
-      <div class="collapse" id="collapseExample">
+      <div class="" id="collapseExample">
         <div class="card card-body">
           <p>-ОС: Windows 10;</p>
           <p>-Процесор: INTEL CORE I5-8400 or AMD RYZEN 3 3300X;</p>
           <p>-відеокарта: NVIDIA GEFORCE GTX 1060 3 GB or AMD RADEON RX 580 4 GB;</p>
-          <p>-відеопам'ять: 4 Гбайт;</p>
           <p>-оперативна пам'ять: 12 GB ОЗУ;</p>
-          <p>-DirectX: 12;</p>
           <p>-місце на диску: 60 Гб (на запуску);</p>
-          <p>-місце для стримінгу текстур високої роздільної здатності: до 32 Гбайт.</p>
         </div>
       </div>
     </div>
