--- a/key.html
+++ b/key.html
@@ -110,7 +110,7 @@
       <div class="card-body">
         <h5 class="card-title">Dying light 2</h5>
         <p class="card-text">Dying Light 2 — жанр survival horror та бойовик від першої особи у жанрі відкритого світу.</p>
-        <a href="#" class="btn btn-primary">Купити 399₴</a>
+        <a href="Dying light 2.html" class="btn btn-primary">Купити 399₴</a>
       </div>
     </div>
   </div>
