--- a/key2.html
+++ b/key2.html
@@ -92,7 +92,7 @@
       <div class="card-body">
         <h5 class="card-title">A Plague Tale: Requiem</h5>
         <p class="card-text">A Plague Tale: Requiem — відеогра в жанрах пригодницький бойовик та стелс, розроблена Asobo Studio.</p>
-        <a href="#" class="btn btn-primary">Купити 789₴</a>
+        <a href="A Plague Tale Requiem.html" class="btn btn-primary">Купити 789₴</a>
       </div>
     </div>
   </div>
