--- a/Dying light 2.html
+++ b/Dying light 2.html
@@ -9,7 +9,7 @@
           rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
           crossorigin="anonymous">
     <link rel="stylesheet" href="css/shopstyles.css">
-    <link rel="stylesheet" href="CDMW2/MW2.css">
+    <link rel="stylesheet" href="Dying Light 2/Dying Light 2.css">
     
 
 </head>
@@ -42,15 +42,15 @@
 
 
   <div class="Call">
-    <div class="card" style="width: 25rem;">
-      <img src="photo/mw2.png" class="card-img-top" alt=".png">
+    <div class="card">
+      <img src="Dying Light 2/Dying Light 2.png" class="card-img-top" alt=".png">
       <div class="card-body">
-        <p class="card-text"><span class="war">Call of Duty: Modern Warfare II</span> 
+        <p class="card-text"><span class="war">Dying Light 2</span> 
           <span class="windows">(Windows, PS 4, PS 5, Xbox One, Xbox SX)</span>
-          <p><span class="raz">Розробник:</span><span class="windows"> Infinity Ward, Raven Software, Beenox, Treyarch, High Moon Studios, Sledgehammer Games, Activision Shanghai, Demonware, Toys for Bob</span></p>
+          <p><span class="raz">Розробник:</span><span class="windows"> Techland</span></p>
           
-          <p class="raz">Видавець: <span class="windows">Activision</span></p>
-          <p>Дата виходу: 28 жов. 2022р.</p>
+          <p class="raz">Видавець: <span class="windows">Techland</span></p>
+          <p>Дата виходу: 4 лют. 2022р.</p>
       </div>
     </div>
   </div>
@@ -61,11 +61,9 @@
         <div class="card" style="width: 55rem;">
           <div class="card-body">
             <h5 class="card-title">Короткий Опис</h5>
-            <p class="card-text">З продовженням перезавантаження Call of Duty: Modern Warfare II у 2022 році користувачі зможуть поринути у тотальний конфлікт оперативників США з наркокартелем.</p>
-            <p class="card-text">При покупці шутера Call of Duty: Modern Warfare II є два видання: Standard і Vault Edition. Розширене видання відкриє доступ до 50 етапів, бойового сезонного пропуску, легендарної ОТГ-141 та багато іншого.</p>
-            <p class="card-text">Стандартне видання відкриє доступ до мережного мультиплеєра, ранніх кампаній та кількох наборів.</p>
-            <p class="card-text">Новий шутер може похвалитися оновленою системою прогресії зброї та кастомізації. Гра має опрацьовану зброю, у тому числі гарну віддачу.</p>
-            <p class="card-text">У гру також додана водна місія та можливість здійснювати стрибки між машинами на ходу. Крім іншого, серед нововведень на вас чекають нові транспортні засоби та нові гаджети.</p>
+            <p class="card-text">Dying Light 2: Stay Human – гра від компанії Techland жанру Survival horror та Action/RPG з виглядом від першої особи, яка дозволить вам поринути в атмосферу постапокаліпсису та жахів виживання через 15 років після епідемії в оригінальній Dying Light.</p>
+            <p class="card-text">Дія гри розгортається у відкритому світі, що за площею практично в чотири рази перевищує площу всіх локацій попередньої частини.</p>
+            <p class="card-text">Візьміть на себе роль мандрівника на ім'я Ейден Колдвелл з винятковими здібностями, від якого може залежати доля Міста та всього людства. Роздирані дивними спогадами, ви опинитеся в епіцентрі подій.</p>
           </div>
         </div>
       </div>
@@ -75,22 +73,22 @@
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">  
 <div class="carousel-item active">
-  <img src="CDMW2/thumb_109912_slide_game_full.jpeg" class="d-block w-100" alt="jpeg">
+  <img src="Dying Light 2/thumb_68984_slide_game_full.png" class="d-block w-100" alt="png">
 </div>
 <div class="carousel-item">
-  <img src="CDMW2/thumb_109911_poster_game_full.jpeg" class="d-block w-100" alt="...">
+  <img src="Dying Light 2/thumb_68986_slide_game_full.png" class="d-block w-100" alt="...">
 </div>
 <div class="carousel-item">
-  <img src="CDMW2/thumb_109913_slide_game_full.jpeg" class="d-block w-100" alt="...">
+  <img src="Dying Light 2/thumb_68987_slide_game_full.png" class="d-block w-100" alt="...">
 </div>
 <div class="carousel-item">
-  <img src="CDMW2/thumb_109914_slide_game_full.jpeg" class="d-block w-100" alt="...">
+  <img src="Dying Light 2/thumb_68988_slide_game_full.png" class="d-block w-100" alt="...">
 </div>
 <div class="carousel-item">
-  <img src="CDMW2/thumb_109915_slide_game_full.jpeg" class="d-block w-100" alt="...">
+  <img src="Dying Light 2/thumb_68991_poster_game_full.png" class="d-block w-100" alt="...">
 </div>
     </div>
-  </div>
+</div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"  data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Предыдущий</span>
@@ -100,6 +98,7 @@
       <span class="visually-hidden">Следующий</span>
     </button>
   
+
 
   <p class="int">
     <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
