--- a/Bf5.html
+++ b/Bf5.html
@@ -9,7 +9,7 @@
           rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
           crossorigin="anonymous">
     <link rel="stylesheet" href="css/shopstyles.css">
-    <link rel="stylesheet" href="Elden Ring/Elden Ring.css">    
+    <link rel="stylesheet" href="Bf5/bf5.css">    
 
 </head>
 <body>
@@ -38,16 +38,16 @@
     
     <div class="Call">
       <div class="card">
-        <img src="photo/elden ring.png" class="card-img-top" alt="png">
+        <img src="Bf5/bf5.png" class="card-img-top" alt="png">
         <div class="card-body">
-          <p class="card-text"><span class="war">Elden Ring</span> 
+          <p class="card-text"><span class="war">Battlefield V</span> 
             <p class="windows">(Windows, PS 4,5, Xbox One, Xbox SX)</p>
-            <p><span class="raz">Розробник:</span><span class="windows"> FromSoftware, Inc.
+            <p><span class="raz">Розробник:</span><span class="windows"> DICE, Сriterion Games.
             </span></p>
             
-            <p class="raz">Видавець: <span class="windows"> Bandai Namco Games, Namco Bandai Games America Inc.
+            <p class="raz">Видавець: <span class="windows"> Electronic Arts.
             </span></p>
-            <p>Дата виходу: 25 лют. 2022р.</p>
+            <p>Дата виходу: 20 листо. 2018р.</p>
         </div>
       </div>
     </div>
@@ -58,11 +58,10 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Короткий Опис</h5>
-              <p class="card-text">Elden Ring – ідейна спадкоємиця культової серії Dark Souls, яка здобула світову популярність завдяки своїй атмосфері, лору та, звичайно ж, небувалій складності.</p>
-              <p class="card-text">FromSoftware спільно з автором книг серії «Гра престолів» Джорджем Мартіном створили абсолютно новий фентезійний світ, щоб ви знову змогли поринути в глибокий і якісний всесвіт похмурого магічного середньовіччя.</p>
-              <p class="card-text">Кожна точка інтересу, знайдена вами на карті, – це не тільки повноцінна пригода, а й приємна нагорода.</p>
-              <p class="card-text">Розробники постаралися, щоб вам хотілося максимально багато часу проводити в мандрівках між главами основного сюжету, тому чим далі і довше ви подорожуєте - тим цікавіше і краще знайдете спорядження.</p>
-              <p class="card-text">Коли йдеться про великі відкриті світи із замками, лісами, полями, горами, болотами, підземеллями та іншими невід'ємними атрибутами фентезійного всесвіту, відразу на думку спадає думка про скакуна.</p>
+              <p class="card-text">Battlefield V — це відеогра в жанрі шутер від першої особи, розроблена EA DICE і видана Electronic Arts.</p>
+              <p class="card-text">Щось схоже ви могли бачити в Battlefield 1. Розробники бажають показати якнайбільше подій та картин в одній грі, і навряд чи цей підхід можна назвати програшним. Гравці відвідують Грецію, Францію, руїни Роттердама, на території Норвегії, в пустелях Північної Африки.</p>
+              <p class="card-text">Повернення кооперативного режиму, який раніше розгромлений гравцями в Battlefield 3. Режим отримав назву «Спільні бої» і вміщує 4-х гравців одночасно. Завдання навряд чи викличуть нудьгу, адже вони не прописані розробниками, а випадково генеруються з інших простих місій у складний ланцюжок.</p>
+              <p class="card-text">Найбільш «соковита частина» будь-якої Battlefield – це мультиплеєр. Величезні карти, різні види техніки, десятки бійців одночасно – все це залишилося у 5 частині, проте відбулася низка змін.</p>
             </div>
           </div>
         </div>
@@ -72,22 +71,19 @@
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="Elden Ring/thumb_70704_slide_game_full.png" class="d-block w-100" alt="png">
+      <img src="Bf5/thumb_11813_slide_game_full.png" class="d-block w-100" alt="png">
     </div>
     <div class="carousel-item">
-      <img src="Elden Ring/thumb_70705_slide_game_full.png" class="d-block w-100" alt="png">
+      <img src="Bf5/thumb_34220_slide_game_full.png" class="d-block w-100" alt="png">
     </div>
     <div class="carousel-item">
-      <img src="Elden Ring/thumb_70706_slide_game_full.png" class="d-block w-100" alt="png">
+      <img src="Bf5/thumb_34221_slide_game_full.png" class="d-block w-100" alt="png">
     </div>
     <div class="carousel-item">
-      <img src="Elden Ring/thumb_70707_slide_game_full.png" class="d-block w-100" alt="png">
+      <img src="Bf5/thumb_34222_slide_game_full.png" class="d-block w-100" alt="png">
     </div>
     <div class="carousel-item">
-      <img src="Elden Ring/thumb_70708_slide_game_full.png" class="d-block w-100" alt="png">
-    </div>
-    <div class="carousel-item">
-      <img src="Elden Ring/thumb_70709_slide_game_full.png" class="d-block w-100" alt="png">
+      <img src="Bf5/thumb_34223_poster_game_full.png" class="d-block w-100" alt="png">
     </div>
   </div>
 </div>
@@ -104,12 +100,9 @@
       <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
         Системні вимоги
       </a>
-      <button class="btn btn-primary" type="button" data-bs-toggle="collapse" href="#collapseExample1" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">
-        Бонус за предзаказ
-      </button>
     </p>
     <div class="Підпис"> 
-      <div class="collapse" id="collapseExample">
+      <div class="" id="collapseExample">
         <div class="card card-body">
           <p>-ОС: Windows 10;</p>
           <p>-Процесор: INTEL CORE I5-8400 or AMD RYZEN 3 3300X;</p>
