--- a/account.html
+++ b/account.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><span class="Menu">Меню</span></a>
+          <a class="navbar-brand" href="index.html"><span class="Menu"><img class="GamePie" src="Menu/GAMEPIE_free-file (1).png" alt="png"></span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -28,16 +28,12 @@
                 <a class="nav-link" href="account.html"><span class="account">Аккаунты</span></a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
-              <button class="btn btn-outline-success" type="submit">Поиск</button>
-            </form>
           </div>
         </div>
       </nav>
       
 <div>
-    <p>viriri</p>
+    <p>В процесі</p>
 </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
