--- a/key.html
+++ b/key.html
@@ -14,9 +14,10 @@
 
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><span class="Menu">Меню</span></a>
+          <a class="navbar-brand" href="index.html"><span class="Menu"><img class="GamePie" src="Menu/GAMEPIE_free-file (1).png" alt="png"></span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -29,13 +30,10 @@
                 <a class="nav-link" href="account.html"><span class="account">Аккаунты</span></a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
-              <button class="btn btn-outline-success" type="submit">Поиск</button>
-            </form>
           </div>
         </div>
       </nav>
+      
     <div>
         <img class="example-img" src="Заставка.png">
     </div>
@@ -47,7 +45,7 @@
         <img src="photo/farcry5.png" class="d-block w-100" alt="png">
       </div>
       <div class="carousel-item">
-       <a href="#"><img src="photo/batla5.png" class="d-block w-100" alt="png"></a>
+       <a href="Bf5.html"><img src="photo/batla5.png" class="d-block w-100" alt="png"></a>
       </div>
       <div class="carousel-item">
         <img src="photo/sekiro.png" class="d-block w-100" alt="png">
@@ -83,6 +81,8 @@
   </ul>
 </div>
 
+
+<div class="center">
 <div class="row row-cols-1 row-cols-md-5 g-4">
   <div class="col">
     <div class="card">
@@ -109,7 +109,7 @@
       <img src="photo/Dying.png" class="card-img-top" alt="png">
       <div class="card-body">
         <h5 class="card-title">Dying light 2</h5>
-        <p class="card-text">Dying Light 2 — жанр survival horror та бойовик від першої особи у жанрі відкритого світу.</p>
+        <p class="card-text">Dying Light 2 — жанр survival horror та бойовик від першої особи у відкритому світі.</p>
         <a href="Dying light 2.html" class="btn btn-primary">Купити 399₴</a>
       </div>
     </div>
@@ -140,7 +140,7 @@
       <img src="photo/red dead.png" class="card-img-top" alt="png">
       <div class="card-body">
         <h5 class="card-title">Red Dead Redemption 2</h5>
-        <p class="card-text">Red Dead Redemption 2 — це пригодницька відеогра, розроблена і видана Rockstar Games.</p>
+        <p class="card-text">Red Dead Redemption 2 — це пригодницька відеогра, розроблена RockstarGames.</p>
         <a href="#" class="btn btn-primary">Купити 810₴</a>
       </div>
     </div>
@@ -173,7 +173,7 @@
       <img src="photo/zero.png" class="card-img-top" alt="png">
       <div class="card-body">
         <h5 class="card-title">Horizon Zero Dawn</h5>
-        <p class="card-text">Horizon Zero Dawn — жанру Action/RPG, розроблена студією Guerrilla Games.</p>
+        <p class="card-text">Horizon Zero Dawn — жанру Action/RPG з відкритим світом  , розроблена студією Guerrilla Games.</p>
         <a href="#" class="btn btn-primary">Купити 450₴</a>
       </div>
     </div>
@@ -191,7 +191,19 @@
   </div>
 
 </div>
+</div>
 
+<div class="pie">
+  <img src="Menu/GAMEPIE_free-file (1).png" alt="">
+</div>
+
+<div class="pos">
+  <div class="block">
+    <a href=""><img class="telega"  src="підвал/Telegram_Messenger.png" alt="png"></a>
+    <a href=""><img class="telega" src="підвал/600px-Instagram_icon.png" alt="png"></a> 
+    <a href=""><img class="telega" src="підвал/Twitter-logo-png-1.png" alt="png"></a>
+  </div>  
+</div>
 
 </div>
 
