--- a/key2.html
+++ b/key2.html
@@ -9,14 +9,14 @@
           rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
           crossorigin="anonymous">
     <link rel="stylesheet" href="css/shopstyles.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Key1.css">
     
 
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><span class="Menu">Меню</span></a>
+          <a class="navbar-brand" href="index.html"><span class="Menu"><img class="GamePie" src="Menu/GAMEPIE_free-file (1).png" alt="png"></span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -29,10 +29,6 @@
                 <a class="nav-link" href="account.html"><span class="account">Аккаунты</span></a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
-              <button class="btn btn-outline-success" type="submit">Поиск</button>
-            </form>
           </div>
         </div>
       </nav>
@@ -77,13 +73,14 @@
   <div>
     <ul class="nav">
       <li class="nav-item">
-       <div class="New2">
+       <div class="New">
         <a class="nav-link active" aria-current="page" href="key2.html">>Новинки<</a>
        </div>
       </li>
     </ul>
   </div>
 
+  <div class="center">
 <div class="Go"> 
   <div class="row row-cols-1 row-cols-md-5 g-4">
   <div class="col">
@@ -91,7 +88,7 @@
       <img src="photo/Requiem.png" class="card-img-top" alt="png">
       <div class="card-body">
         <h5 class="card-title">A Plague Tale: Requiem</h5>
-        <p class="card-text">A Plague Tale: Requiem — відеогра в жанрах пригодницький бойовик та стелс, розроблена Asobo Studio.</p>
+        <p class="card-text">A Plague Tale: Requiem — відеогра в жанрах пригодницький бойовик та стелс.</p>
         <a href="A Plague Tale Requiem.html" class="btn btn-primary">Купити 789₴</a>
       </div>
     </div>
@@ -111,7 +108,7 @@
       <img src="photo/Valhalla.png" class="card-img-top" alt="png">
       <div class="card-body">
         <h5 class="card-title">Assassin’s Creed: Valhalla</h5>
-        <p class="card-text">Assassin's Creed Valhalla — багатоплатформна відеогра жанру рольового бойовика та стелс.</p>
+        <p class="card-text">Assassin's Creed Valhalla — відеогра жанру рольового бойовика та стелс.</p>
         <a href="#" class="btn btn-primary">Купити 1209₴</a>
       </div>
     </div>
@@ -144,7 +141,7 @@
       <img src="photo/Haiku.png" class="card-img-top" alt="png">
       <div class="card-body">
         <h5 class="card-title">Haiku, the Robot</h5>
-        <p class="card-text">Haiku — це мила пригодницька дослідницька гра, дія якої відбувається у величезному взаємопов’язаному світі, повному зіпсованих роботів і техніки.</p>
+        <p class="card-text">Haiku — це мила пригодницька гра, дія якої відбувається у взаємопов’язаному світі, повному зіпсованих роботів і техніки.</p>
         <a href="#" class="btn btn-primary">Купити 239₴</a>
       </div>
     </div>
@@ -177,7 +174,7 @@
       <img src="photo/Protocol.png" class="card-img-top" alt="png">
       <div class="card-body">
         <h5 class="card-title">The Callisto Protocol</h5>
-        <p class="card-text">The Callisto Protocol – це майбутня відеогра у жанрі survival horror, розроблена Striking Distance Studios і видана Krafton.</p>
+        <p class="card-text">The Callisto Protocol – це майбутня відеогра у жанрі survival horror, пригодницька, файтинг, розроблена Striking Distance Studios і видана Krafton.</p>
         <a href="#" class="btn btn-primary">Предзаказ 615₴</a>
       </div>
     </div>
@@ -193,11 +190,13 @@
       </div>
     </div>
   </div>
-
-
+  
 
 </div> 
-  
+</div>
+
+
+
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
